<resources>
    <string name="app_name">NGO</string>
    <string name="title_activity_self_voluntering_tabbed">SelfVolunteringTabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_self_volunteering_details">SelfVolunteeringDetailsActivity</string>
    <string name="title_activity_volunteering">VolunteeringActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_self_volunteering">SelfVolunteeringActivity</string>
    <string name="title_activity_consulting">ConsultingActivity</string>
    <string name="title_activity_our_services">OurServicesActivity</string>


    <string-array name="MF">
        <item> Male </item>
        <item> Female </item>
    </string-array>

    <string-array name="EventList">
        <item>Event 1</item>
        <item>Event 2</item>
        <item>Event 3</item>
        <item>Event 4</item>
        <item>Event 5</item>
    </string-array>


    <string name="text_accounts">All User Accounts :</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_DateOfBirth">Date of Birth</string>
    <string name="hint_DateOfAdmission">Date of Admission</string>
    <string name="hint_Address">Address</string>
    <string name="hint_sclass">Class</string>
    <string name="hint_phno">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>

    <string name="text_hello"> Student details</string>
    <string name="text_title">Firebase Student Database</string>

    <string name="spinnerMF"> Gender </string>
    <string name="strregistrationAddress">Registration addr</string>
    <string name="strregistrationAge">Age</string>
    <string name="strregistrationMobileno">Mobile no.</string>
    <string name="volunteerID">VounteerID</string>
</resources>
